--- a/catolog.html
+++ b/catolog.html
@@ -241,175 +241,155 @@
           <ul class="hotel-list">
             <li class="hotel-item">
               <img
+                class="hotel-item-img"
                 src="images/hotels-images/hotel-1.jpg"
                 alt="Отель Amara Resort & Spa"
                 width="300"
                 height="212"
               />
               <h3 class="hotel-item-title">Amara Resort <span>&</span> Spa</h3>
-              <div class="hotel-item-wrapper">
-                <span>Гостиница</span>
-                <span class="hotel-item-price">От 4000 ₽</span>
+              <span>Гостиница</span>
+              <span class="hotel-item-price">От 4000 ₽</span>
+              <a href="" class="hotel-button-link button">подробнее</a>
+              <button class="hotel-button button" type="button">
+                в избранное
+              </button>
+              <div class="star-rating">
+                <img
+                  src="images/star.svg"
+                  alt="иконки звезды"
+                  width="18"
+                  height="17"
+                />
+                <img
+                  src="images/star.svg"
+                  alt="иконки звезды"
+                  width="18"
+                  height="17"
+                /><img
+                  src="images/star.svg"
+                  alt="иконки звезды"
+                  width="18"
+                  height="17"
+                /><img
+                  src="images/star.svg"
+                  alt="иконки звезды"
+                  width="18"
+                  height="17"
+                />
               </div>
-              <div class="hotel-item-wrapper">
-                <a href="" class="hotel-button-link button">подробнее</a>
-                <button class="hotel-button button" type="button">
-                  в избранное
-                </button>
-              </div>
-              <div class="hotel-item-wrapper">
-                <div class="star-rating">
-                  <img
-                    src="images/star.svg"
-                    alt="иконки звезды"
-                    width="18"
-                    height="17"
-                  />
-                  <img
-                    src="images/star.svg"
-                    alt="иконки звезды"
-                    width="18"
-                    height="17"
-                  /><img
-                    src="images/star.svg"
-                    alt="иконки звезды"
-                    width="18"
-                    height="17"
-                  /><img
-                    src="images/star.svg"
-                    alt="иконки звезды"
-                    width="18"
-                    height="17"
-                  />
-                </div>
-                <p class="hotel-rating">Рейтинг: 8,5</p>
-              </div>
+              <p class="hotel-rating">Рейтинг: 8,5</p>
             </li>
             <li class="hotel-item">
               <img
+                class="hotel-item-img"
                 src="images/hotels-images/hotel-2.jpg"
                 alt="Отель Villas at Poco Diablo"
                 width="300"
                 height="212"
               />
               <h3 class="hotel-item-title">Villas at Poco Diablo</h3>
-              <div class="hotel-item-wrapper">
-                <span>Гостиница</span>
-                <span class="hotel-item-price">От 5000 ₽</span>
+              <span>Гостиница</span>
+              <span class="hotel-item-price">От 5000 ₽</span>
+              <a href="" class="hotel-button-link button">подробнее</a>
+              <button class="hotel-button button hotel-chosed" type="button">
+                в избранном
+              </button>
+              <div class="star-rating">
+                <img
+                  src="images/star.svg"
+                  alt="иконки звезды"
+                  width="18"
+                  height="17"
+                />
+                <img
+                  src="images/star.svg"
+                  alt="иконки звезды"
+                  width="18"
+                  height="17"
+                />
+                <img
+                  src="images/star.svg"
+                  alt="иконки звезды"
+                  width="18"
+                  height="17"
+                />
+                <img
+                  src="images/star.svg"
+                  alt="иконки звезды"
+                  width="18"
+                  height="17"
+                />
               </div>
-              <div class="hotel-item-wrapper">
-                <a href="" class="hotel-button-link button">подробнее</a>
-                <button class="hotel-button button hotel-chosed" type="button">
-                  в избранное
-                </button>
-              </div>
-              <div class="hotel-item-wrapper stars-wrapper">
-                <div class="star-rating">
-                  <img
-                    src="images/star.svg"
-                    alt="иконки звезды"
-                    width="18"
-                    height="17"
-                  />
-                  <img
-                    src="images/star.svg"
-                    alt="иконки звезды"
-                    width="18"
-                    height="17"
-                  />
-                  <img
-                    src="images/star.svg"
-                    alt="иконки звезды"
-                    width="18"
-                    height="17"
-                  />
-                  <img
-                    src="images/star.svg"
-                    alt="иконки звезды"
-                    width="18"
-                    height="17"
-                  />
-                </div>
-                <p class="hotel-rating">Рейтинг: 9,2</p>
-              </div>
+              <p class="hotel-rating">Рейтинг: 9,2</p>
             </li>
             <li class="hotel-item">
               <img
+                class="hotel-item-img"
                 src="images/hotels-images/hotel-3.jpg"
                 alt="Отель Desert Quail Inn"
                 width="300"
                 height="212"
               />
               <h3 class="hotel-item-title">Desert Quail Inn</h3>
-              <div class="hotel-item-wrapper">
-                <span>Гостиница</span>
-                <span class="hotel-item-price">От 2500 ₽</span>
+              <span>Гостиница</span>
+              <span class="hotel-item-price">От 2500 ₽</span>
+              <a href="" class="hotel-button-link button">подробнее</a>
+              <button class="hotel-button button" type="button">
+                в избранное
+              </button>
+              <div class="star-rating">
+                <img
+                  src="images/star.svg"
+                  alt="иконки звезды"
+                  width="18"
+                  height="17"
+                />
+                <img
+                  src="images/star.svg"
+                  alt="иконки звезды"
+                  width="18"
+                  height="17"
+                />
+                <img
+                  src="images/star.svg"
+                  alt="иконки звезды"
+                  width="18"
+                  height="17"
+                />
               </div>
-              <div class="hotel-item-wrapper">
-                <a href="" class="hotel-button-link button">подробнее</a>
-                <button class="hotel-button button" type="button">
-                  в избранное
-                </button>
-              </div>
-              <div class="hotel-item-wrapper">
-                <div class="star-rating">
-                  <img
-                    src="images/star.svg"
-                    alt="иконки звезды"
-                    width="18"
-                    height="17"
-                  />
-                  <img
-                    src="images/star.svg"
-                    alt="иконки звезды"
-                    width="18"
-                    height="17"
-                  />
-                  <img
-                    src="images/star.svg"
-                    alt="иконки звезды"
-                    width="18"
-                    height="17"
-                  />
-                </div>
-                <p class="hotel-rating">Рейтинг: 6,9</p>
-              </div>
+              <p class="hotel-rating">Рейтинг: 6,9</p>
             </li>
             <li class="hotel-item">
               <img
+                class="hotel-item-img"
                 src="images/hotels-images/hotel-4.jpg"
                 alt="GreenTree Inn"
                 width="300"
                 height="212"
               />
               <h3 class="hotel-item-title">GreenTree Inn</h3>
-              <div class="hotel-item-wrapper">
-                <span>Гостиница</span>
-                <span class="hotel-item-price">От 1500 ₽</span>
+              <span>Гостиница</span>
+              <span class="hotel-item-price">От 1500 ₽</span>
+              <a href="" class="hotel-button-link button">подробнее</a>
+              <button class="hotel-button button" type="button">
+                в избранное
+              </button>
+              <div class="star-rating">
+                <img
+                  src="images/star.svg"
+                  alt="иконки звезды"
+                  width="18"
+                  height="17"
+                />
+                <img
+                  src="images/star.svg"
+                  alt="иконки звезды"
+                  width="18"
+                  height="17"
+                />
               </div>
-              <div class="hotel-item-wrapper">
-                <a href="" class="hotel-button-link button">подробнее</a>
-                <button class="hotel-button button" type="button">
-                  в избранное
-                </button>
-              </div>
-              <div class="hotel-item-wrapper">
-                <div class="star-rating">
-                  <img
-                    src="images/star.svg"
-                    alt="иконки звезды"
-                    width="18"
-                    height="17"
-                  />
-                  <img
-                    src="images/star.svg"
-                    alt="иконки звезды"
-                    width="18"
-                    height="17"
-                  />
-                </div>
-                <p class="hotel-rating">Рейтинг: 5,0</p>
-              </div>
+              <p class="hotel-rating">Рейтинг: 5,0</p>
             </li>
           </ul>
 
